crates/macros/tests/ui/validator_each_invalid_entry_fail.stderr
error: unsupported each(...) entry; use flags or key-value entries
 --> tests/ui/validator_each_invalid_entry_fail.rs:5:21
  |
5 |     #[validate(each(42))]
  |                     ^^
