crates/macros/tests/ui/validator_each_invalid_entry_fail.rs
use nebula_macros::Validator;

#[derive(Validator)]
struct InvalidEachEntry {
    #[validate(each(42))]
    names: Vec<String>,
}

fn main() {}